--- a/about/index.html
+++ b/about/index.html
@@ -6,24 +6,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>About</title>
+  <meta name="description" content="Description of this website">
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+  <link rel="manifest" href="../images/site.webmanifest">
+  <title>About This Site</title>
 </head>
 
 <body>
-  <!-- TODO: add menu links, delete this comment -->
   <header>
     <nav>
       <ul>
-        <li><a href="">Home</a></li>
+        <li><a href="../">Home</a></li>
         <li><a>About</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="../contact/">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>About</h1>
+    <h1>About America's Founding Documents</h1>
+    <p>America's founding documents is where Gove Allen shares information about the documents he reroduces in is his volunteer work for the Colonial Heritage Foundation.  These Documents are (nearly) all reprodctions of printed ephemera significant to the American Founding.</p>
   </main>
 </body>
 
