--- a/contact/index.html
+++ b/contact/index.html
@@ -2,26 +2,36 @@
 <html lang="en">
 
 <head>
-  <!-- TODO: adjust title, add meta description, add your favicon info, delete this comment -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Contact</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="How to contact the creator of the document reproductions featured on this site">
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
+  <link rel="manifest" href="../images/site.webmanifest">
+  <title>Contact Give Allen</title>
 </head>
 
 <body>
-  <!-- TODO: add menu links, delete this comment -->
   <header>
     <nav>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="../">Home</a></li>
+        <li><a href="../about/">About</a></li>
         <li><a>Contact</a></li>
       </ul>
     </nav>
   </header>
-  <h1>Contact</h1>
+  <h1>Contact Gove Allen</h1>
+  Gove Allen is the creater of the document reproductions featured on this site.  You can contact him in the way that best suits you.
+
+  <ul>
+    <li><a href="mailto:gove@colonialheritage.org?subject=Colonial%20Documents%20Inquiry">Email: gove@colonialheritage.org</a></li>
+    <li><a href="tel:801-372-0683">Phone</a> or <a href="sms:801-372-0683">Text</a>: 801-372-0683</li>
+    <li>Postal Mail: 854 N 1375 W, Provo, UT 84604</li>
+  </ul>
 </body>
 
 </html>
