fixed html validation errors

--- a/contact/index.html
+++ b/contact/index.html
@@ -25,13 +25,16 @@
     </nav>
   </header>
   <h1>Contact Gove Allen</h1>
-  Gove Allen is the creater of the document reproductions featured on this site.  You can contact him in the way that best suits you.
-
+  <p>
+    Gove Allen is the creater of the document reproductions featured on this site.  You can contact him in the way that best suits you.
+  </p>
+  <address>
   <ul>
     <li><a href="mailto:gove@colonialheritage.org?subject=Colonial%20Documents%20Inquiry">Email: gove@colonialheritage.org</a></li>
     <li><a href="tel:801-372-0683">Phone</a> or <a href="sms:801-372-0683">Text</a>: 801-372-0683</li>
     <li>Postal Mail: 854 N 1375 W, Provo, UT 84604</li>
   </ul>
+</address>
 </body>
 
 </html>
