--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
     </header>
     <main>
         <h1>Documents of the American Founding</h1>
-        <p>Our reproductions are all printed on an English Common Press, the most popular kind of printing press in North America during the Amerian founding.</p></body>
+        <p>Our reproductions are all printed on an English Common Press, the most popular kind of printing press in North America during the American founding.</p>
         <article>
             <h2>The Declaration of Independence</h2>
             <figure>
                 <img src="images/goddard-25-percent.png" alt="Goddard printing of the Declaration of Independence" width="299" height="469">
-                <figCaption>Goddard printing of the Declaration of Independence</figCaption>
+                <figcaption>Goddard printing of the Declaration of Independence</figCaption>
             </figure>
             <p>
                 Three versions of the Declaration of Independence are presented here.  In order of publication, these are:
-                <ol>
-                    <li>The Dunlap Broadisde (printed July 4, 1776).  <strong>This is the first printed version.</strong> </li>
-                    <li>The Massachusetts Spy (printed July 14. 1776). This is the most widely circulated printing.</li>
-                    <li>The Goddard Broadside (Printed January, 1777). This is the first "official" printing.</li>
-                </ol>
+            </p>    
+            <ol>
+                <li>The Dunlap Broadside (printed July 4, 1776).  <strong>This is the first printed version.</strong> </li>
+                <li>The Massachusetts Spy (printed July 14. 1776). This is the most widely circulated printing.</li>
+                <li>The Goddard Broadside (Printed January, 1777). This is the first "official" printing.</li>
+            </ol>
+            <p>
                 It may be difficult to overstate the effect that the Declaration of Independence had on the minds of people living in America in 1776.  By some estimates, prior to the publication of the Declaration, only about 30 percent of American's favored independence over reconciliation.  Within a month of July fourth, that number had doubled.
             </p>
         </article>
@@ -43,23 +45,26 @@
             <h2>The Constitution</h2>
             <figure>
                 <img src="images/secret_constitution-25-percent.png" alt="Secret first draft of the constitution" width="297" height="462">
-                <figCaption>Secret first draft of the constitution</figCaption>
+                <figcaption>Secret first draft of the constitution</figCaption>
             </figure>
             <p>
                 Two versions of the US Constitution are presented here:
-                <ol>
-                    <li>Secret First Draft (printed August,  1787).  After the Federal Convention debated several proposals for a new constitution, it organized a committe of detail to write a cohesive docuemnt using the ideas agreed upon from the various proposals.  Thier work comprised 23 articles and was secretly printed by John Dunlap and David Claypoole.  This version of the constituion was a working draft, intened for use only in convention discussion. </li>
-                    <li>The First Massachusetts printing (printed September, 1797). Printed by Benjamin Edes and Jonathan Gill, this printing of the proposed consitution accomapnes a resolution by the Federal Convention that the Constituion be sent out for ratification as well as a letter from George Washington applealing to the people of the United States of America to ratify the constitution.</li>
-                </ol>
-                By 1787, the thirteen American States were anyting but united. Disagreements between the states over trade, navigtation rights, paper money, and more left many people wondering if the Union could endure. After Shays' Rebellion in western Massachusetts, it became clear that major adjustments needed to be made to the method of government if the thriteen states were to continute as a single federaion.
+            </p>    
+            <ol>
+                <li>Secret First Draft (printed August,  1787).  After the Federal Convention debated several proposals for a new constitution, it organized a committee of detail to write a cohesive document using the ideas agreed upon from the various proposals.  Their work comprised 23 articles and was secretly printed by John Dunlap and David Claypoole.  This version of the Constitution was a working draft, intended for use only in convention discussion. </li>
+                <li>The First Massachusetts printing (printed September, 1797). Printed by Benjamin Edes and Jonathan Gill, this printing of the proposed constitution accompanies a resolution by the Federal Convention that the Constitution be sent out for ratification as well as a letter from George Washington appealing to the people of the United States of America to ratify the constitution.</li>
+            </ol>
+            <p>
+                By 1787, the thirteen American States were anything but united. Disagreements between the states over trade, navigation rights, paper money, and more left many people wondering if the Union could endure. After Shays' Rebellion in western Massachusetts, it became clear that major adjustments needed to be made to the method of government if the thirteen states were to continue as a single federation.
             </p>
         </article>
         <aside>
-            <p>The printed word was extremely important to the founding of America.  Although the literacy rate in eighteenth-century European cites was about 50 percent while <em>in America, the rate approximates 90 percent</em>.  Per capita, there are more printing presses in 18th centruy America than there are anywhere else in the world. New ideas about both the origin of govenment and it proper role are spread throughout the American coloines through the network of newspaers.  Always eager for new content to print, newspaper publishers often subscribed to may other news papers from different colonies and would have no hesitation in repringing an article they though their readership would apprecite.  In this way, a article submitted to a single newspaper in Boston could have been read through out the coloies in a few months.</p>
+            <p>The printed word was extremely important to the founding of America.  Although the literacy rate in eighteenth-century European cites was about 50 percent while <em>in America, the rate approximates 90 percent</em>.  Per capita, there are more printing presses in 18th century America than there are anywhere else in the world. New ideas about both the origin of government and it proper role are spread throughout the American colonies through the network of newspapers.  Always eager for new content to print, newspaper publishers often subscribed to may other news papers from different colonies and would have no hesitation in reprinting an article they though their readership would appreciate.  In this way, a article submitted to a single newspaper in Boston could have been read through out the colonies in a few months.</p>
         </aside>
     </main>
 <footer>
     <p></p>
 
 </footer>
+</body>
 </html>
